[cs-demo] CSButton - fixed button style preview in dark mode

--- a/cs-ui-demo/src/sass/previews/_custom.scss
+++ b/cs-ui-demo/src/sass/previews/_custom.scss
@@ -121,6 +121,7 @@
 				font-size: 0.8125rem;
 				border: none;
 				@include sc(--csd-button-preview-c);
+				@include sbg(--csd-button-preview-table-header-bg);
 
 				&:nth-child(-n+2) {
 					border: none;
